<resources>
    <string name="app_name">MultiFontViewKotlin</string>
    <string name="name">Name</string>
    <string name="click_button">Click Button</string>
    <string name="hello_world">Hello World!</string>
    <string name="switch_name">Switch</string>
    <string name="radio_button">RadioButton</string>
    <string name="checkbox_name">CheckBox</string>
    <string-array name="customFonts">
        <item>BLESSED.otf</item>
        <item>Respective.ttf</item>
        <item>Respective_Slanted.ttf</item>
        <item>Shine.ttf</item>
        <item>SweetSensations.ttf</item>
        <item>Crasns.ttf</item>
        <item>Carre.ttf</item>
        <item>KGTF.ttf</item>
    </string-array>
</resources>
